# adb-dump

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cargo_bloat.yml  ci.yml
src/: lib.rs  main.rs
tests/: meta_constants_.rs
