[package]
name = "adb-dump"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A command line utility to dump as much of a phone's data as accessible via ADB. Best effort. The library exposes many utility functions for scraping adb."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/adb-dump"
homepage = "https://github.com/Tamschi/adb-dump/tree/v0.0.1"
documentation = "https://docs.rs/adb-dump/0.0.1"
keywords = ["andoid", "adb", "pull", "backup", "tool"]
categories = ["hardware-support"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
]
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/adb-dump" }
is-it-maintained-open-issues = { repository = "Tamschi/adb-dump" }
maintenance = { status = "experimental" }

[lib]

[[bin]]
name = "adb-dump"

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"

[dependencies]
hex = "0.4.2"
unix_mode = "0.1.1"
